--- a/payroll.html
+++ b/payroll.html
@@ -368,26 +368,12 @@
                         </tbody>
                     </table>
                 </center>
-                <div>
-                    <ul class="ajaxtabs my-4" rel="_tabs_div">
-                        <li>
-                            <button type="submit" name="tabs_pay_details" class="current"
-                                style="border-bottom: 2px solid var(--darkgreen); color: var(--darkgreen);">
-                                <span>Pay Details</span>
-                            </button>
-                        </li>
-                        <li>
-                            <button type="submit" name="tabs_Payment" class="ajaxbutton">
-                                <span>Allocations</span>
-                            </button>
-                        </li>
-                        <li>
-                            <button type="submit" name="tabs_gl" class="ajaxbutton" accesskey="G">
-                                <span>General Ledger</span>
-                            </button>
-                        </li>
-                    </ul>
-                    <div class="spaceBox"></div><input type="hidden" name="_tabs_sel" value="pay_details">
+                <div class="mt-4">
+                    <h6 class="employee-detail-heading">
+                        <center>Pay Details</center>
+                    </h6>
+
+                    <div class="spaceBox mt-4"></div><input type="hidden" name="_tabs_sel" value="pay_details">
                     <div class="contentBox pay_details" id="_tabs_div">
                         <center>
                             <table class="tablestyle " width="100%" cellpadding="2" cellspacing="0">
