--- a/login.html
+++ b/login.html
@@ -21,19 +21,19 @@
             <img src="Images/logo (2).png" alt="">
             <h3>Welcome Back!</h3>>
         </div>
-        <div class="col-md-6 log-right d-flex justify-content-center align-items-center">
+        <div class="col-md-6 log-right d-flex justify-content-center align-items-center px-5">
             <form action="">
                 <h3>Log In</h3>
                 <div>
                     <label for="enterMail">Email Address</label> <br>
-                    <input type="mail" id="enterMail" placeholder="Enter Your Email">
+                    <input type="mail" id="enterMail">
                 </div>
                 <div>
                     <label for="enterPass">Password</label> <br>
-                    <input type="password" placeholder="Enter Password">
+                    <input type="password" >
                 </div>
-                <button type="submit" class="login-btn">Login</button> <br>
                 <button class="forgot-pass">Forgot Password ?</button>
+                <button type="submit" class="login-btn">Login</button> <br>
             </form>
         </div>
     </div>
