--- a/payroll.html
+++ b/payroll.html
@@ -373,7 +373,7 @@
                             <table class="tablestyle " width="100%" cellpadding="2" cellspacing="0">
                                 <tbody>
                                     <tr valign="top" class="d-flex flex-column flex-lg-row">
-                                        <td>
+                                        <td class="pay-detail-td">
                                             <table class="tablestyle_inner">
                                                 <tbody>
                                                     <tr>
@@ -445,8 +445,8 @@
                                             <input type="hidden" name="payslip_id" value="1"><input type="hidden"
                                                 name="ot_earnings" value="0">
                                         </td>
-                                        <td>
-                                            <table class="tablestyle_inner ms-lg-3">
+                                        <td class="pay-detail-td">
+                                            <table class="tablestyle_inner Deduction ms-lg-3">
                                                 <tbody>
                                                     <tr>
                                                         <td colspan="2" class="tableheader">Deduction</td>
